[project]
name = "choose"
version = "0.1.0"
description = "A small CLI tool to help you choose among N options via pairwise comparison"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
choose = "choose:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["choose.py"]
